--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,7 @@ title: "COVID-19 en España"
 output: github_document
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file --> 
+<!-- README.md es generado desde README.Rmd. Por favor edita ese archivo --> 
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
