--- a/grafico-covid19.Rmd
+++ b/grafico-covid19.Rmd
@@ -46,6 +46,7 @@ df_daily <- covid_es %>%
 df1 <- covid_es %>% dplyr::filter(date == max(date))
 ```
 
+
 Resumen
 =======================================================================
 
@@ -57,19 +58,12 @@ Row {data-width=400}
 ```{r}
 
 valueBox(
-  value = paste(format(df$confirmados, big.mark = ","), "", sep = " "),
+  value = paste(format(df$confirmados, big.mark = ".", decimal.mark = ","), "", sep = " "),
   caption = "Casos confirmados totales",
-  icon = "fas fa-user-md",
+  icon = "fas fa-virus",
   color = confirmed_color
 )
 ```
-
-
-
-
-
-
-
 
 
 
@@ -84,7 +78,7 @@ valueBox(
 ```{r}
 
 valueBox(
-  value = paste(format(df$fallecidos, big.mark = ","), " (",
+  value = paste(format(df$fallecidos, big.mark = ",", decimal.mark = ","), " (",
     round(100 * df$death / df$confirmados, 1),
     "%)",
     sep = ""
@@ -96,37 +90,67 @@ valueBox(
 ```
 
 
+
+
+
+
+
+### Activos {.value-box}
+
+```{r}
+
+valueBox(
+  value = paste(format(df$activos, big.mark = ".", decimal.mark = ","), "", sep = " "),
+  caption = "Casos Activos totales",
+  icon = "fas fa-lung-virus",
+  color = active_color
+)
+```
+
+
+
+
+
 Row
 -----------------------------------------------------------------------
 
-### **Casos acumulados diarios, por tipo**
+### **Casos totales diarios, por tipo**
     
 ```{r}
 plotly::plot_ly(data = df_daily) %>%
   plotly::add_trace(
     x = ~date,
-    # y = ~active_cum,
-    y = ~confirmed_cum,
+    y = ~confirmados,
     type = "scatter",
     mode = "lines+markers",
-    # name = "Active",
-    name = "Confirmed",
-    line = list(color = active_color),
-    marker = list(color = active_color)
-  ) %>%
+    name = "Confirmados",
+    line = list(color = confirmed_color, shape = "spline"),
+    marker = list(color = confirmed_color)
+  ) %>% 
   plotly::add_trace(
     x = ~date,
-    y = ~death_cum,
+    y = ~fallecidos,
     type = "scatter",
     mode = "lines+markers",
-    name = "Death",
+    name = "Muertes",
     line = list(color = death_color),
     marker = list(color = death_color)
   ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~recuperados,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Recuperados",
+    line = list(color = recovered_color),
+    marker = list(color = recovered_color)
+  ) %>%
   plotly::add_annotations(
-    x = as.Date("2020-02-04"),
-    y = 1,
-    text = paste("First case"),
+    x = as.Date("2020-03-15"),
+    y = 7753,
+    text = paste("Inicia la",
+                 "",
+                 "cuarentena"),
     xref = "x",
     yref = "y",
     arrowhead = 5,
@@ -136,107 +160,216 @@ plotly::plot_ly(data = df_daily) %>%
     ax = -10,
     ay = -90
   ) %>%
-  plotly::add_annotations(
-    x = as.Date("2020-03-11"),
-    y = 3,
-    text = paste("First death"),
-    xref = "x",
-    yref = "y",
-    arrowhead = 5,
-    arrowhead = 3,
-    arrowsize = 1,
-    showarrow = TRUE,
-    ax = -90,
-    ay = -90
-  ) %>%
-  plotly::add_annotations(
-    x = as.Date("2020-03-18"),
-    y = 14,
-    text = paste(
-      "New containment",
-      "",
-      "measures"
-    ),
-    xref = "x",
-    yref = "y",
-    arrowhead = 5,
-    arrowhead = 3,
-    arrowsize = 1,
-    showarrow = TRUE,
-    ax = -10,
-    ay = -90
-  ) %>%
+#  plotly::add_annotations(
+#    x = as.Date("2020-03-11"),
+#    y = 3,
+#    text = paste("First death"),
+#    xref = "x",
+#    yref = "y",
+#    arrowhead = 5,
+#    arrowhead = 3,
+#    arrowsize = 1,
+#    showarrow = TRUE,
+#    ax = -90,
+#    ay = -90
+#  ) %>%
+#  plotly::add_annotations(
+#    x = as.Date("2020-03-18"),
+#    y = 14,
+#    text = paste(
+#      "New containment",
+#      "",
+#      "measures"
+#    ),
+#    xref = "x",
+#    yref = "y",
+#    arrowhead = 5,
+#    arrowhead = 3,
+#    arrowsize = 1,
+#    showarrow = TRUE,
+#    ax = -10,
+#    ay = -90
+#  ) %>%
   plotly::layout(
     title = "",
-    yaxis = list(title = "Cumulative number of cases"),
-    xaxis = list(title = "Date"),
+    yaxis = list(title = "Casos totales acumulados"),
+    xaxis = list(title = "Fecha"),
     legend = list(x = 0.1, y = 0.9),
     hovermode = "compare"
   )
 ```
 
-Comparación
+Comunidades Autonomas
 =======================================================================
 
 
-Column {data-width=400}
+Column
 -------------------------------------
 
 
-### **Casos nuevos diarios**
+### **Casos totales diarios**
     
 ```{r}
-daily_confirmed <- coronavirus %>%
-  dplyr::filter(type == "confirmed") %>%
-  dplyr::filter(date >= "2020-02-29") %>%
-  dplyr::mutate(country = Country.Region) %>%
-  dplyr::group_by(date, country) %>%
-  dplyr::summarise(total = sum(cases)) %>%
-  dplyr::ungroup() %>%
-  tidyr::pivot_wider(names_from = country, values_from = total)
+daily_confirmed <- covid_es %>%
+#  dplyr::filter(type == "confirmed") %>%
+#  dplyr::filter(date >= "2020-02-29") %>%
+#  dplyr::mutate(country = Country.Region) %>%
+#  dplyr::group_by(date, country) %>%
+#  dplyr::summarise(total = sum(cases)) %>%
+#  dplyr::ungroup() %>%
+  dplyr::filter(CCAA != "España") %>% 
+  dplyr::select(CCAA, date, confirmados) %>% 
+  dplyr::arrange(date) %>% 
+  tidyr::pivot_wider(names_from = CCAA, values_from = confirmados)
 
 #----------------------------------------
 # Plotting the data
 
-daily_confirmed %>%
-  plotly::plot_ly() %>%
+plotly::plot_ly(daily_confirmed) %>%
   plotly::add_trace(
     x = ~date,
-    y = ~Belgium,
+    y = ~Andalucía,
     type = "scatter",
     mode = "lines+markers",
-    name = "Belgium"
+    name = "Andalucía"
   ) %>%
   plotly::add_trace(
     x = ~date,
-    y = ~France,
+    y = ~Aragón,
     type = "scatter",
     mode = "lines+markers",
-    name = "France"
+    name = "Aragón"
   ) %>%
   plotly::add_trace(
     x = ~date,
-    y = ~Spain,
+    y = ~Asturias,
     type = "scatter",
     mode = "lines+markers",
-    name = "Spain"
+    name = "Asturias"
   ) %>%
   plotly::add_trace(
     x = ~date,
-    y = ~Italy,
+    y = ~Baleares,
     type = "scatter",
     mode = "lines+markers",
-    name = "Italy"
+    name = "Baleares"
   ) %>%
-  plotly::layout(
+    plotly::add_trace(
+    x = ~date,
+    y = ~Canarias,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Canarias"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Cantabria,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Cantabria"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~`Castilla La Mancha`,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Castilla-La Mancha"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~`Castilla y León`,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Castilla y León"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Cataluña,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Cataluña"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Ceuta,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Ceuta"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~`C. Valenciana`,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "C. Valenciana"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Extremadura,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Extremadura"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Galicia,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Galicia"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Madrid,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Madrid"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Melilla,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Melilla"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Murcia,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Murcia"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~Navarra,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "Navarra"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~`País Vasco`,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "País Vasco"
+  ) %>%
+    plotly::add_trace(
+    x = ~date,
+    y = ~`La Rioja`,
+    type = "scatter",
+    mode = "lines+markers",
+    name = "La Rioja"
+  ) %>%
+    plotly::layout(
     title = "",
-    legend = list(x = 0.1, y = 0.9),
-    yaxis = list(title = "Number of new cases"),
-    xaxis = list(title = "Date"),
+    legend = list(x = 0.1, y = 1.05),
+    yaxis = list(title = "Casos Totales"),
+    xaxis = list(title = "Fecha"),
     # paper_bgcolor = "black",
     # plot_bgcolor = "black",
     # font = list(color = 'white'),
-    hovermode = "compare",
+    # hovermode = "compare",
+    hovermode = "closest",
+    separators = ",.",
     margin = list(
       # l = 60,
       # r = 40,
