--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,9 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Gráfico no interactivo que muestra la evolución de los casos de COVID-19 en España y sus provincias, basado en el trabajo realizado por [Rami Krispin](https://ramikrispin.github.io/coronavirus/) y [Antoine Soetewey](https://www.statsandr.com/blog/how-to-create-a-simple-coronavirus-dashboard-specific-to-your-country-in-r/).
+Gráfico no interactivo que muestra la evolución de los casos de COVID-19 en España y sus provincias, basado en el trabajo realizado
+ por [Rami Krispin](https://ramikrispin.github.io/coronavirus/) 
+ y [Antoine Soetewey](https://www.statsandr.com/blog/how-to-create-a-simple-coronavirus-dashboard-specific-to-your-country-in-r/).
 
 
 ## Fuentes
